clusters/on-prem-cluster/core/goldilocks/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: goldilocks
  labels:
    name: goldilocks
